# purple-cli

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/purple/: __init__.py  api.py  auth.py  cli.py  settings.py
